--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>index</p>
-  <a href="contacts.html">contacts</a>
+<div class="main-section section">
+  <div class="container">
+    <p>Main section</p>
+  </div>
+</div>
+
+<div class="about-section section">
+  <div class="container">
+    <p>About section</p>
+  </div>
+</div>
+
+<div class="category-section section">
+  <div class="container">
+    <div class="section-title">Категории товаров</div>
+    <div class="grid-container">
+      <div class="item item1 grey-bg"></div>
+      <div class="item item2 grey-bg"></div>
+      <div class="item item3 grey-bg"></div>
+      <div class="item item4 grey-bg"></div>
+      <div class="item item5 grey-bg"></div>
+      <div class="item item6 grey-bg"></div>
+      <div class="item item7 grey-bg"></div>
+      <div class="item item8 grey-bg"></div>
+      <div class="item item9 grey-bg"></div>
+      <div class="item item10 grey-bg"></div>
+      <div class="item item11 grey-bg"></div>
+      <div class="item item12 grey-bg"></div>
+    </div>
+  </div>
+</div>
+
+<div class="brands-section section">
+  <div class="container">
+    <p>Brands section</p>
+  </div>
+</div>
+
+<div class="complex-solution-section section">
+  <div class="container">
+    <p>Complex solution section</p>
+  </div>
+</div>
+
+<div class="callback-dealer-section section">
+  <div class="container">
+    <p>Callback dealer section</p>
+  </div>
+</div>
+
+<div class="news-section section">
+  <div class="container">
+    <p>News section</p>
+  </div>
+</div>
+
+<div class="events-section">
+  <div class="container">
+    <p>Events section</p>
+  </div>
 </div>
 
 <!--#include virtual="/parts/footer.html" -->
