--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
   <div class="container">
     <p>Footer</p>
+    <a href="contacts.html">contacts</a>
   </div>
 </footer>
 
