Header html + css layout

--- a/parts/header.html
+++ b/parts/header.html
@@ -13,6 +13,28 @@
 
   <header class="header">
     <div class="container">
-      <p>Header</p>
+      <div class="flex-container">
+        <div class="logo">
+          <img src="/images/logo.png" alt="">
+        </div>
+        <a href="catalog.html" class="catalog-btn">
+          <span class="catalog-btn__text">Каталог</span>
+          <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
+        </a>
+        <form class="search-form" action="">
+          <input type="text" name="search_query" class="search-input" placeholder="Поиск по каталогу">
+          <button type="submit" class="search-submit-btn">
+            <img src="/images/search-lens.png" alt="">
+          </button>
+        </form>
+        <div class="header-contacts">
+          <a href="#" class="tp-item telegram">
+            <img src="/images/circle-telegram.png" alt="">
+          </a>
+          <a href="#" class="tp-item phone">
+            <img src="/images/circle-phone.png" alt="">
+          </a>
+        </div>
+      </div>
     </div>
   </header>
