About sectio htm l + css layout

--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 
 <div class="main-section section">
   <div class="container">
-    <p>Main section</p>
+    <div class="main-banner">
+      <div class="main-banner-text">
+        <div class="main-banner-title">Телевизор Samsung QLED</div>
+        <div class="main-banner-subtitle">Высокое качество в 8К</div>
+        <a href="catalog.html" class="catalog-btn">
+          <span class="catalog-btn__text">Перейти в каталог</span>
+          <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
 <div class="about-section section">
   <div class="container">
-    <p>About section</p>
+    <div class="grid-container">
+      <div class="about-text">
+        <div class="section-title">О нас</div>
+        <div class="about-description">Компания работает с <span class="violet-color">ведущими производителями рынка</span>, успешно решает задачу импортозамещения и развивает несколько собственных торговых марок.</div>
+      </div>
+      <div class="about-info">
+        <div class="about-rectangle about-rectangle-violet">
+          <div class="about-rectangle__number">50 000+</div>
+          <div class="about-rectangle__title">Товарных позиций</div>
+        </div>
+        <div class="about-rectangle about-rectangle-pink">
+          <div class="about-rectangle__number">500</div>
+          <div class="about-rectangle__title">Дилеров</div>
+        </div>
+        <div class="about-rectangle about-rectangle-violet">
+          <div class="about-rectangle__number">5 000+</div>
+          <div class="about-rectangle__title">Брендов в ассортименте</div>
+        </div>
+        <div class="about-rectangle about-rectangle-pink">
+          <div class="about-rectangle__number">600+</div>
+          <div class="about-rectangle__title">Реализованных проектов</div>
+        </div>
+      </div>
+    </div>
+    <a href="about.html" class="about-btn">
+      <span class="about-btn__text">О компании</span>
+      <img src="/images/circle-right-down.png" class="about-btn__image" alt="">
+    </a>
   </div>
 </div>
 
