--- a/parts/header.html
+++ b/parts/header.html
@@ -14,9 +14,9 @@
   <header class="header">
     <div class="container">
       <div class="flex-container">
-        <div class="logo">
+        <a href="/" class="logo">
           <img src="/images/logo.png" alt="">
-        </div>
+        </a>
         <a href="catalog.html" class="catalog-btn">
           <span class="catalog-btn__text">Каталог</span>
           <img src="/images/circle-right-down.png" class="catalog-btn__image" alt="">
