Brands and solutions sections

--- a/index.html
+++ b/index.html
@@ -70,13 +70,93 @@
 
 <div class="brands-section section">
   <div class="container">
-    <p>Brands section</p>
+    <div class="section-title">Популярные бренды (производители)</div>
+    <div class="brands">
+      <div class="brands-item">
+        <img src="/images/temp-philips-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-samsung-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-lg-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-sony-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-philips-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-samsung-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-lg-logo.jpg" alt="">
+      </div>
+      <div class="brands-item">
+        <img src="/images/temp-sony-logo.jpg" alt="">
+      </div>
+    </div>
   </div>
 </div>
 
-<div class="complex-solution-section section">
+<div class="complex-solutions-section section">
   <div class="container">
-    <p>Complex solution section</p>
+    <div class="section-title">Комплексные решения</div>
+    <div class="solutions">
+      <div class="solutions-item solutions-item-wide solutions-item-violet">
+        <div class="solutions-item__title">Типовые проекты</div>
+        <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
+        <a href="catalog.html" class="solutions-btn">
+          <span class="solutions-btn__text">Перейти в раздел</span>
+          <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
+        </a>
+        <div class="solutions-item__image">
+          <img src="/images/solutions.png" alt="">
+        </div>
+      </div>
+      <div class="solutions-item solutions-item-wide solutions-item-black">
+        <div class="solutions-item__title">Отраслевой охват</div>
+        <div class="solutions-item__description">Создаем решения для ключевых вертикальных рынков</div>
+        <a href="catalog.html" class="solutions-btn">
+          <span class="solutions-btn__text">Перейти в раздел</span>
+          <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
+        </a>
+        <div class="solutions-item__image">
+          <img src="/images/solutions.png" alt="">
+        </div>
+      </div>
+      <div class="solutions-item solutions-item-slim solutions-item-pink">
+        <div class="solutions-item__title">Креативный контент</div>
+        <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
+        <a href="catalog.html" class="solutions-btn">
+          <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
+        </a>
+        <div class="solutions-item__image">
+          <img src="/images/solutions.png" alt="">
+        </div>
+      </div>
+      <div class="solutions-item solutions-item-slim solutions-item-black">
+        <div class="solutions-item__title">Типовые проекты</div>
+        <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
+        <a href="catalog.html" class="solutions-btn">
+          <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
+        </a>
+        <div class="solutions-item__image">
+          <img src="/images/solutions.png" alt="">
+        </div>
+      </div>
+      <div class="solutions-item solutions-item-slim solutions-item-violet">
+        <div class="solutions-item__title">Типовые проекты</div>
+        <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
+        <a href="catalog.html" class="solutions-btn">
+          <img src="/images/circle-right-down.png" class="solutions-btn__image" alt="">
+        </a>
+        <div class="solutions-item__image">
+          <img src="/images/solutions.png" alt="">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
