--- a/index.html
+++ b/index.html
@@ -162,7 +162,41 @@
 
 <div class="callback-dealer-section section">
   <div class="container">
-    <p>Callback dealer section</p>
+    <div class="callback-dealer">
+      <div class="section-title">Хотите стать дилером?</div>
+      <div class="flex-container">
+        <form class="callback-dealer-form">
+          <div class="callback-dealer__description">Пожалуйста, оставьте контакты, и мы обсудим с вами условия сотрудничества</div>
+          <div class="form-flex-container">
+            <div class="left">
+              <input type="text" name="name" class="input-field mb-20" placeholder="Имя*">
+              <input type="email" name="email" class="input-field mb-40" placeholder="Email*">
+              <button type="button" id="callback-dealer-btn" class="callback-dealer-btn">
+                <span class="callback-dealer-btn__text">Отправить заявку</span>
+                <img src="/images/circle-right.png" class="callback-dealer-btn__image" alt="">
+              </button>
+            </div>
+            <div class="right">
+              <input type="text" name="phone" class="input-field mb-20 js-input-phone-mask" placeholder="+7 (999) 999 99 99">
+              <input type="text" name="company-name" class="input-field mb-40" placeholder="Название компании*">
+              <div class="agreement-text">
+                <input type="checkbox" name="checkbox-read" class="custom-checkbox js-required-checkbox" id="checkbox-read-callback-modal" checked required onchange="document.getElementById('callback-dealer-btn').disabled = !this.checked;">
+                <label for="checkbox-read-callback-modal" class="custom-checkbox-label"></label>
+                <span class="checkbox-text">Ознакомлен с <a href="/privacy-policy" class="privacy-policy-link" target="_blank">политикой конфиденциальности</a></span>
+              </div>
+              <div class="agreement-text">
+                <input type="checkbox" name="checkbox-agree" class="custom-checkbox js-required-checkbox" id="checkbox-agree-callback-modal" checked required onchange="document.getElementById('callback-dealer-btn').disabled = !this.checked;">
+                <label for="checkbox-agree-callback-modal" class="custom-checkbox-label"></label>
+                <span class="checkbox-text">Согласен на <a href="/agreement" class="agreement-link" target="_blank">обработку персональных данных</a></span>
+              </div>
+            </div>
+          </div>
+        </form>
+        <div class="callback-dealer-image">
+          <img src="/images/callback-dealer-image.png" alt="">
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
