News section html + css layout

--- a/index.html
+++ b/index.html
@@ -202,7 +202,54 @@
 
 <div class="news-section section">
   <div class="container">
-    <p>News section</p>
+    <div class="section-title">Комплексные решения</div>
+    <div class="news">
+      <div class="news-item">
+        <div class="news-item__content">
+          <div class="news-item__image">
+            <img src="/images/temp-news-image.jpg" alt="">
+          </div>
+          <div class="news-item__filter"></div>
+          <div class="news-item__date">28.02.2024</div>
+          <div class="news-item__type">статья</div>
+          <a href="#" class="news-item__btn">
+            <span class="news-item__text">Смотреть новость</span>
+            <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+          </a>
+        </div>
+        <div class="news-item__title">Заголовок статьи</div>
+      </div>
+      <div class="news-item">
+        <div class="news-item__content">
+          <div class="news-item__image">
+            <img src="/images/temp-news-image.jpg" alt="">
+          </div>
+          <div class="news-item__filter"></div>
+          <div class="news-item__date">28.02.2024</div>
+          <div class="news-item__type">статья</div>
+          <a href="#" class="news-item__btn">
+            <span class="news-item__text">Смотреть новость</span>
+            <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+          </a>
+        </div>
+        <div class="news-item__title">Заголовок статьи</div>
+      </div>
+      <div class="news-item">
+        <div class="news-item__content">
+          <div class="news-item__image">
+            <img src="/images/temp-news-image.jpg" alt="">
+          </div>
+          <div class="news-item__filter"></div>
+          <div class="news-item__date">28.02.2024</div>
+          <div class="news-item__type">статья</div>
+          <a href="#" class="news-item__btn">
+            <span class="news-item__text">Смотреть новость</span>
+            <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+          </a>
+        </div>
+        <div class="news-item__title">Заголовок статьи</div>
+      </div>
+    </div>
   </div>
 </div>
 
