Footer html + css layout

--- a/index.html
+++ b/index.html
@@ -255,7 +255,13 @@
 
 <div class="events-section">
   <div class="container">
-    <p>Events section</p>
+    <div class="section-title">Мероприятия</div>
+    <div class="events grid-container">
+      <div class="events-item events-item1"></div>
+      <div class="events-item events-item2"></div>
+      <div class="events-item events-item3"></div>
+      <div class="events-item events-item4"></div>
+    </div>
   </div>
 </div>
 
