--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,7 +1,67 @@
 <footer class="footer">
   <div class="container">
-    <p>Footer</p>
-    <a href="contacts.html">contacts</a>
+    <div class="footer-logo">
+      <div class="logo">
+        <img src="/images/logo.png" alt="">
+      </div>
+      <div class="socials">
+        <a href="#" class="socials-item">
+          <img src="/images/footer-telegram.svg" alt="">
+        </a>
+        <a href="#" class="socials-item">
+          <img src="/images/footer-vk.svg" alt="">
+        </a>
+        <a href="#" class="socials-item">
+          <img src="/images/footer-youtube.svg" alt="">
+        </a>
+      </div>
+    </div>
+    <div class="footer-menu">
+      <div class="menu">
+        <div class="menu-title">Партнерам</div>
+        <a href="#" class="menu-item">Экспертиза</a>
+        <a href="#" class="menu-item">Вендоры</a>
+        <a href="#" class="menu-item">Импортозамещение</a>
+      </div>
+      <div class="menu">
+        <div class="menu-title">События</div>
+        <a href="#" class="menu-item">Новости</a>
+        <a href="#" class="menu-item">Мероприятия</a>
+      </div>
+      <div class="menu">
+        <div class="menu-title">Компания</div>
+        <a href="#" class="menu-item">О компании</a>
+        <a href="#" class="menu-item">Как мы работаем</a>
+        <a href="#" class="menu-item">Контакты</a>
+        <a href="#" class="menu-item">Вакансии</a>
+      </div>
+      <div class="address-wrapper">
+        <div class="phone">+7 (999) 999 45 45</div>
+        <div class="address">г. Москва, улица, д.99</div>
+      </div>
+    </div>
+    <div class="footer-text">
+      <div class="text">Все права защищены. Названия компаний и продуктов, упомянутые здесь, являются зарегистрированными товарными знаками соответствующих правообладателей. Не допускается полное или частичное копирование, воспроизведение, распространение или использование любым иным способом размещенных на сайте изображений и материалов без предварительного письменного разрешения ECOPRO-AV.</div>
+      <div class="required-links">
+        <a href="#" class="link">Политика конфиденциальности</a>
+        <a href="#" class="link">Согласие на обработку персональных данных</a>
+        <a href="#" class="link">Раскрытие обязательной информации</a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="info">
+        <div class="copyright">Copyright © ECOPRO-AV</div>
+        <div id="current-year"></div>
+      </div>
+      <div class="developers">
+        <div class="developer">
+          <a href="https://mybutton.ru" target="_blank">Разработчик Студия Button</a>
+        </div>
+        <div class="developer">
+          <a href="https://nhfuture.ru/" target="_blank">Дизайн Andrewwebnh</a>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
 
