--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           <div class="about-rectangle__number">500</div>
           <div class="about-rectangle__title">Дилеров</div>
         </div>
-        <div class="about-rectangle about-rectangle-violet">
+        <div class="about-rectangle about-rectangle-pink">
           <div class="about-rectangle__number">5 000+</div>
           <div class="about-rectangle__title">Брендов в ассортименте</div>
         </div>
-        <div class="about-rectangle about-rectangle-pink">
+        <div class="about-rectangle about-rectangle-violet">
           <div class="about-rectangle__number">600+</div>
           <div class="about-rectangle__title">Реализованных проектов</div>
         </div>
@@ -177,7 +177,7 @@
               </button>
             </div>
             <div class="right">
-              <input type="text" name="phone" class="input-field mb-20 js-input-phone-mask" placeholder="+7 (999) 999 99 99">
+              <input type="text" name="phone" class="input-field input-phone mb-20 js-input-phone-mask" placeholder="+7 (999) 999 99 99">
               <input type="text" name="company-name" class="input-field mb-40" placeholder="Название компании*">
               <div class="agreement-text">
                 <input type="checkbox" name="checkbox-read" class="custom-checkbox js-required-checkbox" id="checkbox-read-callback-modal" checked required onchange="document.getElementById('callback-dealer-btn').disabled = !this.checked;">
@@ -202,7 +202,7 @@
 
 <div class="news-section section">
   <div class="container">
-    <div class="section-title">Комплексные решения</div>
+    <div class="section-title">Новости</div>
     <div class="news">
       <div class="news-item">
         <div class="news-item__content">
