--- a/parts/footer.html
+++ b/parts/footer.html
@@ -43,8 +43,8 @@
     <div class="footer-text">
       <div class="text">Все права защищены. Названия компаний и продуктов, упомянутые здесь, являются зарегистрированными товарными знаками соответствующих правообладателей. Не допускается полное или частичное копирование, воспроизведение, распространение или использование любым иным способом размещенных на сайте изображений и материалов без предварительного письменного разрешения ECOPRO-AV.</div>
       <div class="required-links">
-        <a href="#" class="link">Политика конфиденциальности</a>
-        <a href="#" class="link">Согласие на обработку персональных данных</a>
+        <a href="/privacy-policy.html" class="link">Политика конфиденциальности</a>
+        <a href="/agreement.html" class="link">Согласие на обработку персональных данных</a>
         <a href="#" class="link">Раскрытие обязательной информации</a>
       </div>
     </div>
