--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <div class="about-description">Компания работает с <span class="violet-color">ведущими производителями рынка</span>, успешно решает задачу импортозамещения и развивает несколько собственных торговых марок.</div>
       </div>
       <div class="about-info">
-        <div class="about-rectangle about-rectangle-violet">
+        <div class="about-rectangle about-rectangle-blue">
           <div class="about-rectangle__number">50 000+</div>
           <div class="about-rectangle__title">Товарных позиций</div>
         </div>
-        <div class="about-rectangle about-rectangle-pink">
+        <div class="about-rectangle about-rectangle-black">
           <div class="about-rectangle__number">500</div>
           <div class="about-rectangle__title">Дилеров</div>
         </div>
-        <div class="about-rectangle about-rectangle-pink">
+        <div class="about-rectangle about-rectangle-black">
           <div class="about-rectangle__number">5 000+</div>
           <div class="about-rectangle__title">Брендов в ассортименте</div>
         </div>
-        <div class="about-rectangle about-rectangle-violet">
+        <div class="about-rectangle about-rectangle-blue">
           <div class="about-rectangle__number">600+</div>
           <div class="about-rectangle__title">Реализованных проектов</div>
         </div>
@@ -104,7 +104,7 @@
   <div class="container">
     <div class="section-title">Комплексные решения</div>
     <div class="solutions">
-      <div class="solutions-item solutions-item-wide solutions-item-violet">
+      <div class="solutions-item solutions-item-wide solutions-item-blue">
         <div class="solutions-item__title">Типовые проекты</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
         <a href="catalog.html" class="solutions-btn">
@@ -126,7 +126,7 @@
           <img src="/images/solutions.png" alt="">
         </div>
       </div>
-      <div class="solutions-item solutions-item-slim solutions-item-pink">
+      <div class="solutions-item solutions-item-slim solutions-item-blue">
         <div class="solutions-item__title">Креативный контент</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
         <a href="catalog.html" class="solutions-btn">
@@ -146,7 +146,7 @@
           <img src="/images/solutions.png" alt="">
         </div>
       </div>
-      <div class="solutions-item solutions-item-slim solutions-item-violet">
+      <div class="solutions-item solutions-item-slim solutions-item-blue">
         <div class="solutions-item__title">Типовые проекты</div>
         <div class="solutions-item__description">Разрабатываем решения для основных типовых объектов</div>
         <a href="catalog.html" class="solutions-btn">
