--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer-logo">
+    <div class="flex-container">
       <div class="logo">
-        <img src="/images/logo.png" alt="">
+        <img src="/images/logo-white.png" alt="">
       </div>
       <div class="socials">
         <a href="#" class="socials-item">
