--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="grid-container">
       <div class="about-text">
         <div class="section-title">О нас</div>
-        <div class="about-description">Компания работает с <span class="violet-color">ведущими производителями рынка</span>, успешно решает задачу импортозамещения и развивает несколько собственных торговых марок.</div>
+        <div class="about-description">Компания работает с <span class="blue-color">ведущими производителями рынка</span>, успешно решает задачу импортозамещения и развивает несколько собственных торговых марок.</div>
       </div>
       <div class="about-info">
         <div class="about-rectangle about-rectangle-blue">
