--- a/parts/header.html
+++ b/parts/header.html
@@ -36,5 +36,37 @@
           </a>
         </div>
       </div>
+      <div class="top-menu">
+        <div class="menu-item">
+          <a href="/catalog.html" class="menu-item__link">Каталог</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Производители</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Новости</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Мероприятия</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Публикации</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Скачать</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Экспертиза</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">О нас</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Стать партнером</a>
+        </div>
+        <div class="menu-item">
+          <a href="#" class="menu-item__link">Контакты</a>
+        </div>
+      </div>
     </div>
   </header>
