--- a/index.html
+++ b/index.html
@@ -203,8 +203,6 @@
   </div>
 </div>
 
-
-
 <div class="brands-section section">
   <div class="container">
     <div class="section-title">Популярные бренды (производители)</div>
@@ -390,6 +388,7 @@
   </div>
 </div>
 
+<!-- 
 <div class="events-section">
   <div class="container">
     <div class="section-title">Мероприятия</div>
@@ -398,6 +397,43 @@
       <div class="events-item events-item2"></div>
       <div class="events-item events-item3"></div>
       <div class="events-item events-item4"></div>
+    </div>
+  </div>
+</div>
+-->
+
+<div class="events-section">
+  <div class="container">
+    <div class="section-title">Мероприятия</div>
+    <div class="events">
+      <div class="events-item">
+        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__image">
+          <img src="/images/temp-news-image.jpg" alt="">
+        </div>
+        <div class="events-item__filter"></div>
+      </div>
+      <div class="events-item">
+        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__image">
+          <img src="/images/temp-news-image.jpg" alt="">
+        </div>
+        <div class="events-item__filter"></div>
+      </div>
+      <div class="events-item">
+        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__image">
+          <img src="/images/temp-news-image.jpg" alt="">
+        </div>
+        <div class="events-item__filter"></div>
+      </div>
+      <div class="events-item">
+        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__image">
+          <img src="/images/temp-news-image.jpg" alt="">
+        </div>
+        <div class="events-item__filter"></div>
+      </div>
     </div>
   </div>
 </div>
