Manufacturers page html + css layout

--- a/parts/header.html
+++ b/parts/header.html
@@ -41,7 +41,7 @@
           <a href="/catalog.html" class="menu-item__link">Каталог</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Производители</a>
+          <a href="/manufacturers.html" class="menu-item__link">Производители</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">Новости</a>
