--- a/manufacturers.html
+++ b/manufacturers.html
@@ -1,7 +1,73 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>manufacturers</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Наши производители</div>
+  </div>
 </div>
+
+<div class="manufacturers-page">
+  <div class="container">
+    <div class="page-title">Наши производители</div>
+    <div class="manufacturers">
+      <div class="manufacturers-item">
+        <div class="manufacturers-item__logo">
+          <img src="/images/logo-philips.png" alt="">
+        </div>
+        <div class="manufacturers-item__text">
+          <p class="p">За последние десять лет Philips пережила трансформацию и стала компанией, сфокусированной на решениях в области развития технологий для улучшения качества жизни и здоровья людей</p>
+          <p class="p">Наша цель – улучшать здоровье и качество жизни людей с помощью значимых инноваций. Основная миссия компании – улучшение жизни 2,5 миллиардов людей ежегодно до 2030 года, включая 400 миллионов человек из сообществ с ограниченным доступом к медицинской помощи.</p> 
+          <p class="p">Philips является технологической компанией, и вместе с нашими лицензиатами мы создаем инновации для людей и уверены, что всегда есть способ изменить жизнь к лучшему.</p>
+        </div>
+        <div class="manufacturers-item__link">
+          <a href="#" class="link" target="_blank">ссылка на сайт</a>
+        </div>
+      </div>
+      <div class="manufacturers-item">
+        <div class="manufacturers-item__logo">
+          <img src="/images/logo-samsung.png" alt="">
+        </div>
+        <div class="manufacturers-item__text">
+          <p class="p">Samsung обязуется соблюдать местные законы и нормативные требования, а также применять ко всем сотрудникам строгий глобальный кодекс деловой этики. Мы считаем, что этичное управление — это не только способ реагирования на быстрые изменения в глобальной бизнес-среде, но и инструмент для построения доверительных отношений с заинтересованными лицами, в том числе с клиентами, акционерами, сотрудниками, деловыми партнерами и представителями местных сообществ. Стремясь стать одной из самых этичных компаний в мире, Samsung продолжает обучать своих сотрудников и использовать системы мониторинга, применяя методы справедливого и прозрачного корпоративного управления.</p>
+        </div>
+        <div class="manufacturers-item__link">
+          <a href="#" class="link" target="_blank">ссылка на сайт</a>
+        </div>
+      </div>
+            <div class="manufacturers-item">
+        <div class="manufacturers-item__logo">
+          <img src="/images/logo-philips.png" alt="">
+        </div>
+        <div class="manufacturers-item__text">
+          <p class="p">За последние десять лет Philips пережила трансформацию и стала компанией, сфокусированной на решениях в области развития технологий для улучшения качества жизни и здоровья людей</p>
+          <p class="p">Наша цель – улучшать здоровье и качество жизни людей с помощью значимых инноваций. Основная миссия компании – улучшение жизни 2,5 миллиардов людей ежегодно до 2030 года, включая 400 миллионов человек из сообществ с ограниченным доступом к медицинской помощи.</p> 
+          <p class="p">Philips является технологической компанией, и вместе с нашими лицензиатами мы создаем инновации для людей и уверены, что всегда есть способ изменить жизнь к лучшему.</p>
+        </div>
+        <div class="manufacturers-item__link">
+          <a href="#" class="link" target="_blank">ссылка на сайт</a>
+        </div>
+      </div>
+      <div class="manufacturers-item">
+        <div class="manufacturers-item__logo">
+          <img src="/images/logo-samsung.png" alt="">
+        </div>
+        <div class="manufacturers-item__text">
+          <p class="p">Samsung обязуется соблюдать местные законы и нормативные требования, а также применять ко всем сотрудникам строгий глобальный кодекс деловой этики. Мы считаем, что этичное управление — это не только способ реагирования на быстрые изменения в глобальной бизнес-среде, но и инструмент для построения доверительных отношений с заинтересованными лицами, в том числе с клиентами, акционерами, сотрудниками, деловыми партнерами и представителями местных сообществ. Стремясь стать одной из самых этичных компаний в мире, Samsung продолжает обучать своих сотрудников и использовать системы мониторинга, применяя методы справедливого и прозрачного корпоративного управления.</p>
+        </div>
+        <div class="manufacturers-item__link">
+          <a href="#" class="link" target="_blank">ссылка на сайт</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 1;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
