News page html +tml+ css layout

--- a/catalog.html
+++ b/catalog.html
@@ -13,133 +13,137 @@
 <div class="catalog-page">
   <div class="container">
     <div class="page-title">Каталог оборудования</div>
-    <div class="categories">
 
-      <div class="categories-item categories-item-square categories-item-blue">
-        <div class="categories-item__title">Коммерческие и гостиничные ТВ</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-kommercheskie-i-gostinichnye-tv.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-black">
-        <div class="categories-item__title">Пассивное сетевое оборудование</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-passivnoe-setevoe-oborudovanie.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-wide">
-        <div class="categories-item__title">DJ оборудование</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-dj-oborudovanie.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
+    <div class="category-section">
+      <div class="categories">
 
-      <div class="categories-item categories-item-square categories-item-wide">
-        <div class="categories-item__title">Выдвижные мониторы</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-vydvizhnye-monitory.png" alt="">
+        <div class="categories-item categories-item-square categories-item-blue">
+          <div class="categories-item__title">Коммерческие и гостиничные ТВ</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-kommercheskie-i-gostinichnye-tv.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
+        <div class="categories-item categories-item-square categories-item-black">
+          <div class="categories-item__title">Пассивное сетевое оборудование</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-passivnoe-setevoe-oborudovanie.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-black">
-        <div class="categories-item__title">Интерактивное оборудование</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-interaktivnoe-oborudovanie.png" alt="">
+        <div class="categories-item categories-item-wide">
+          <div class="categories-item__title">DJ оборудование</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-dj-oborudovanie.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-blue">
-        <div class="categories-item__title">Студийное оборудование</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-studijnoe-oborudovanie.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
 
-      <div class="categories-item categories-item-square categories-item-blue">
-        <div class="categories-item__title">Решения Digital Signage</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-resheniya-digital-signage.png" alt="">
+        <div class="categories-item categories-item-square categories-item-wide">
+          <div class="categories-item__title">Выдвижные мониторы</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-vydvizhnye-monitory.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
+        <div class="categories-item categories-item-square categories-item-black">
+          <div class="categories-item__title">Интерактивное оборудование</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-interaktivnoe-oborudovanie.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-black">
-        <div class="categories-item__title">Запись и трансляция</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-zapis-i-translyaciya.png" alt="">
+        <div class="categories-item categories-item-square categories-item-blue">
+          <div class="categories-item__title">Студийное оборудование</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-studijnoe-oborudovanie.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-wide">
-        <div class="categories-item__title">Профессиональные дисплеи</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-professionalnye-displei.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
 
-      <div class="categories-item categories-item-wide">
-        <div class="categories-item__title">Системы отображения информации</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-sistemy-otobrazheniya-informacii.png" alt="">
+        <div class="categories-item categories-item-square categories-item-blue">
+          <div class="categories-item__title">Решения Digital Signage</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-resheniya-digital-signage.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
+        <div class="categories-item categories-item-square categories-item-black">
+          <div class="categories-item__title">Запись и трансляция</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-zapis-i-translyaciya.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-black">
-        <div class="categories-item__title">Модули видеостен</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-moduli-videosten.png" alt="">
+        <div class="categories-item categories-item-wide">
+          <div class="categories-item__title">Профессиональные дисплеи</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-professionalnye-displei.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
         </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
-      <div class="categories-item categories-item-square categories-item-blue">
-        <div class="categories-item__title">All-in-One LED</div>
-        <div class="categories-item__image">
-          <img src="/images/catalog-all-in-one-led.png" alt="">
-        </div>
-        <div class="circle-right-down">
-          <img src="/images/circle-right-down.png" alt="">
-        </div>
-        <a href="#" class="full-link"></a>
-      </div>
 
+        <div class="categories-item categories-item-wide">
+          <div class="categories-item__title">Системы отображения информации</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-sistemy-otobrazheniya-informacii.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
+        </div>
+        <div class="categories-item categories-item-square categories-item-black">
+          <div class="categories-item__title">Модули видеостен</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-moduli-videosten.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
+        </div>
+        <div class="categories-item categories-item-square categories-item-blue">
+          <div class="categories-item__title">All-in-One LED</div>
+          <div class="categories-item__image">
+            <img src="/images/catalog-all-in-one-led.png" alt="">
+          </div>
+          <div class="circle-right-down">
+            <img src="/images/circle-right-down.png" alt="">
+          </div>
+          <a href="#" class="full-link"></a>
+        </div>
+
+      </div>
     </div>
+    
   </div>
 </div>
 
