--- a/parts/footer.html
+++ b/parts/footer.html
@@ -25,7 +25,7 @@
       </div>
       <div class="menu">
         <div class="menu-title">События</div>
-        <a href="#" class="menu-item">Новости</a>
+        <a href="/news.html" class="menu-item">Новости</a>
         <a href="#" class="menu-item">Мероприятия</a>
       </div>
       <div class="menu">
