--- a/parts/header.html
+++ b/parts/header.html
@@ -44,7 +44,7 @@
           <a href="/manufacturers.html" class="menu-item__link">Производители</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Новости</a>
+          <a href="/news.html" class="menu-item__link">Новости</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">Мероприятия</a>
