--- a/index.html
+++ b/index.html
@@ -342,47 +342,47 @@
       <div class="news-item">
         <div class="news-item__content">
           <div class="news-item__image">
-            <img src="/images/temp-news-image.jpg" alt="">
+            <img src="/images/temp-news-image1.jpg" alt="">
           </div>
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
           <a href="#" class="news-item__btn">
-            <span class="news-item__text">Смотреть новость</span>
+            <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
         </div>
-        <div class="news-item__title">Заголовок статьи</div>
+        <div class="news-item__title">Написать красивым шрифтом на русском и английском языке</div>
       </div>
       <div class="news-item">
         <div class="news-item__content">
           <div class="news-item__image">
-            <img src="/images/temp-news-image.jpg" alt="">
+            <img src="/images/temp-news-image2.jpg" alt="">
           </div>
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
           <a href="#" class="news-item__btn">
-            <span class="news-item__text">Смотреть новость</span>
+            <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
         </div>
-        <div class="news-item__title">Заголовок статьи</div>
+        <div class="news-item__title">Может ли нейросеть сочинить текст песни онлайн? Да, нейросеть, такая как ChatGPT</div>
       </div>
       <div class="news-item">
         <div class="news-item__content">
           <div class="news-item__image">
-            <img src="/images/temp-news-image.jpg" alt="">
+            <img src="/images/temp-news-image3.jpg" alt="">
           </div>
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
           <a href="#" class="news-item__btn">
-            <span class="news-item__text">Смотреть новость</span>
+            <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
         </div>
-        <div class="news-item__title">Заголовок статьи</div>
+        <div class="news-item__title">Онлайн-приложение для создания пользовательских текстовых эффектов и логотипов</div>
       </div>
     </div>
   </div>
@@ -407,30 +407,30 @@
     <div class="section-title">Мероприятия</div>
     <div class="events">
       <div class="events-item">
-        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__title">Где и как продвигать бизнес в 2025 году</div>
         <div class="events-item__image">
-          <img src="/images/temp-news-image.jpg" alt="">
+          <img src="/images/temp-events-image1.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
       </div>
       <div class="events-item">
-        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__title">Конференция по процессной аналитике</div>
         <div class="events-item__image">
-          <img src="/images/temp-news-image.jpg" alt="">
+          <img src="/images/temp-events-image2.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
       </div>
       <div class="events-item">
-        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__title">Цифровые решения для промышленных предприятий</div>
         <div class="events-item__image">
-          <img src="/images/temp-news-image.jpg" alt="">
+          <img src="/images/temp-events-image3.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
       </div>
       <div class="events-item">
-        <div class="events-item__title">Заголовок мероприятия</div>
+        <div class="events-item__title">Рекламный хаб Северной столицы</div>
         <div class="events-item__image">
-          <img src="/images/temp-news-image.jpg" alt="">
+          <img src="/images/temp-events-image4.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
       </div>
