--- a/news.html
+++ b/news.html
@@ -1,7 +1,117 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>news</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Новости</div>
+  </div>
 </div>
+
+<div class="news-page">
+  <div class="container">
+    <div class="page-title">Новости</div>
+    <div class="news-section">
+      <div class="news">
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image1.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Написать красивым шрифтом на русском и английском языке</div>
+        </div>
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image2.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Может ли нейросеть сочинить текст песни онлайн? Да, нейросеть, такая как ChatGPT</div>
+        </div>
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image3.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Онлайн-приложение для создания пользовательских текстовых эффектов и логотипов</div>
+        </div>
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image4.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Генератор текста онлайн бесплатно экономит время и силы с искусственным интеллектом</div>
+        </div>
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image5.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Генератор текста онлайн - нейросеть для написания</div>
+        </div>
+        <div class="news-item">
+          <div class="news-item__content">
+            <div class="news-item__image">
+              <img src="/images/temp-news-image6.jpg" alt="">
+            </div>
+            <div class="news-item__filter"></div>
+            <div class="news-item__date">28.02.2024</div>
+            <div class="news-item__type">статья</div>
+            <a href="#" class="news-item__btn">
+              <span class="news-item__text">Читать новость</span>
+              <img src="/images/circle-right-down.png" class="news-item__image" alt="">
+            </a>
+          </div>
+          <div class="news-item__title">Написать текст на русском языке нейросетью онлайн</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 2;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
