News page and news detail page html + css layout

--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -38,7 +38,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -53,7 +53,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -68,7 +68,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -83,7 +83,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -98,7 +98,7 @@
             <div class="news-item__filter"></div>
             <div class="news-item__date">28.02.2024</div>
             <div class="news-item__type">статья</div>
-            <a href="#" class="news-item__btn">
+            <a href="/news-detail.html" class="news-item__btn">
               <span class="news-item__text">Читать новость</span>
               <img src="/images/circle-right-down.png" class="news-item__image" alt="">
             </a>
@@ -106,6 +106,32 @@
           <div class="news-item__title">Написать текст на русском языке нейросетью онлайн</div>
         </div>
       </div>
+
+      <ul class="pager">
+        <li class="pager-item pager-item-nav pager-item-previous">
+          <a href="#" class="pager-item-link" rel="prev">Назад</a>
+        </li>
+        <div class="numbers">
+          <li class="pager-item active">
+            <span class="pager-item-span">1</span>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">2</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">3</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">4</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">5</a>
+          </li>
+        </div>
+        <li class="pager-item pager-item-nav pager-item-next">
+          <a href="#" class="pager-item-link" rel="next">Вперед</a>
+        </li>
+      </ul>
     </div>
   </div>
 </div>
