--- a/parts/footer.html
+++ b/parts/footer.html
@@ -26,7 +26,7 @@
       <div class="menu">
         <div class="menu-title">События</div>
         <a href="/news.html" class="menu-item">Новости</a>
-        <a href="#" class="menu-item">Мероприятия</a>
+        <a href="/events.html" class="menu-item">Мероприятия</a>
       </div>
       <div class="menu">
         <div class="menu-title">Компания</div>
