--- a/events.html
+++ b/events.html
@@ -1,7 +1,54 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>events</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Мероприятия</div>
+  </div>
 </div>
+
+<div class="events-page">
+  <div class="container">
+    <div class="page-title">Наши мероприятия</div>
+    <div class="events-section">
+      <div class="events">
+
+      </div>
+
+      <ul class="pager">
+        <li class="pager-item pager-item-nav pager-item-previous">
+          <a href="#" class="pager-item-link" rel="prev">Назад</a>
+        </li>
+        <div class="numbers">
+          <li class="pager-item active">
+            <span class="pager-item-span">1</span>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">2</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">3</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">4</a>
+          </li>
+          <li class="pager-item">
+            <a href="#" class="pager-item-link">5</a>
+          </li>
+        </div>
+        <li class="pager-item pager-item-nav pager-item-next">
+          <a href="#" class="pager-item-link" rel="next">Вперед</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 3;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
