--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
-          <a href="#" class="news-item__btn">
+          <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
@@ -362,7 +362,7 @@
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
-          <a href="#" class="news-item__btn">
+          <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
@@ -377,7 +377,7 @@
           <div class="news-item__filter"></div>
           <div class="news-item__date">28.02.2024</div>
           <div class="news-item__type">статья</div>
-          <a href="#" class="news-item__btn">
+          <a href="/news-detail.html" class="news-item__btn">
             <span class="news-item__text">Читать новость</span>
             <img src="/images/circle-right-down.png" class="news-item__image" alt="">
           </a>
@@ -412,6 +412,7 @@
           <img src="/images/temp-events-image1.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
+        <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
         <div class="events-item__title">Конференция по процессной аналитике</div>
@@ -419,6 +420,7 @@
           <img src="/images/temp-events-image2.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
+        <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
         <div class="events-item__title">Цифровые решения для промышленных предприятий</div>
@@ -426,6 +428,7 @@
           <img src="/images/temp-events-image3.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
+        <a href="/events-detail.html" class="full-link"></a>
       </div>
       <div class="events-item">
         <div class="events-item__title">Рекламный хаб Северной столицы</div>
@@ -433,6 +436,7 @@
           <img src="/images/temp-events-image4.jpg" alt="">
         </div>
         <div class="events-item__filter"></div>
+        <a href="/events-detail.html" class="full-link"></a>
       </div>
     </div>
   </div>
