--- a/news-detail.html
+++ b/news-detail.html
@@ -1,7 +1,48 @@
 <!--#include virtual="/parts/header.html" -->
 
-<div class="container">
-  <p>news detail карточка новости</p>
+<div class="breadcrumbs">
+  <div class="container">
+    <div class="parent">
+      <a href="/">Главная</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="parent">
+      <a href="/news.html">Новости</a>
+    </div>
+    <div class="separator">/</div>
+    <div class="active">Samsung QH98C – всегда в центре внимания аудитории</div>
+  </div>
 </div>
+
+<div class="news-detail-page">
+  <div class="container">
+    <div class="news-detail-title">Samsung QH98C – всегда в центре внимания аудитории</div>
+    <div class="news-detail-content">
+      <div class="news-detail-image">
+        <img src="/images/temp-news-detail.jpg" alt="">
+      </div>
+      <div class="news-detail-desciption">
+        <p>Бренд StudioLogic был создан в Италии Лино Рагни, владельцем фирмы Fatar. Первый продукт, выпущенный StudioLogic в 1986 году – цифровые клавишные Studio 88. Сейчас продукция компании экспортируется в 65 стран мира, ассортимент включает профессиональные электронные клавишные инструменты: синтезаторы, MIDI контроллеры, цифровые пианино и органы.</p>
+        <p>Samsung – это глобальный технологический лидер, чье имя стало синонимом инноваций и передовых разработок. Основанная в 1938 году как торговая компания, Samsung со временем превратилась в многопрофильный конгломерат, охватывающий электронику, строительство, судостроение, и, конечно же, информационные технологии.</p>
+        <p>В сфере электроники Samsung занимает лидирующие позиции в производстве телевизоров, смартфонов, бытовой техники и полупроводников. Компания постоянно инвестирует в исследования и разработки, стремясь создавать продукты, которые улучшают жизнь людей и предвосхищают их потребности.</p><p>Samsung Electronics – это центр инноваций, где рождаются новые технологии и дизайнерские решения. Компания активно сотрудничает с ведущими университетами и научно-исследовательскими институтами по всему миру, стремясь оставаться на передовой научно-технического прогресса.</p>
+        <p>Благодаря своей приверженности качеству, инновациям и клиентоориентированности, Samsung завоевала доверие миллионов потребителей по всему миру и продолжает укреплять свои позиции в качестве одного из самых узнаваемых и уважаемых брендов в мире.</p>
+      </div>
+    </div>
+
+    <ul class="pager">
+      <li class="pager-item pager-item-nav pager-item-previous">
+        <a href="#" class="pager-item-link" rel="prev">Назад</a>
+      </li>
+      <li class="pager-item pager-item-nav pager-item-next">
+          <a href="#" class="pager-item-link" rel="next">Вперед</a>
+        </li>
+    </ul>
+    
+  </div>
+</div>
+
+<script>
+  const topMenuItemActive = 2;
+</script>
 
 <!--#include virtual="/parts/footer.html" -->
