--- a/parts/header.html
+++ b/parts/header.html
@@ -47,7 +47,7 @@
           <a href="/news.html" class="menu-item__link">Новости</a>
         </div>
         <div class="menu-item">
-          <a href="#" class="menu-item__link">Мероприятия</a>
+          <a href="/events.html" class="menu-item__link">Мероприятия</a>
         </div>
         <div class="menu-item">
           <a href="#" class="menu-item__link">Публикации</a>
