--- a/events.html
+++ b/events.html
@@ -13,37 +13,150 @@
 <div class="events-page">
   <div class="container">
     <div class="page-title">Наши мероприятия</div>
-    <div class="events-section">
-      <div class="events">
 
-      </div>
-
-      <ul class="pager">
-        <li class="pager-item pager-item-nav pager-item-previous">
-          <a href="#" class="pager-item-link" rel="prev">Назад</a>
-        </li>
-        <div class="numbers">
-          <li class="pager-item active">
-            <span class="pager-item-span">1</span>
-          </li>
-          <li class="pager-item">
-            <a href="#" class="pager-item-link">2</a>
-          </li>
-          <li class="pager-item">
-            <a href="#" class="pager-item-link">3</a>
-          </li>
-          <li class="pager-item">
-            <a href="#" class="pager-item-link">4</a>
-          </li>
-          <li class="pager-item">
-            <a href="#" class="pager-item-link">5</a>
-          </li>
+    <div class="events">
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image1.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
         </div>
-        <li class="pager-item pager-item-nav pager-item-next">
-          <a href="#" class="pager-item-link" rel="next">Вперед</a>
-        </li>
-      </ul>
+        <div class="events-item__content">
+          <div class="events-item__title">Где и как продвигать бизнес в 2025 году</div>
+          <div class="events-item__description">Генератор текста онлайн - нейросеть для написания. Просто напишите, о чем создать текст: можно подробное описание, а можно только название.</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image2.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
+        </div>
+        <div class="events-item__content">
+          <div class="events-item__title">Конференция по процессной аналитике</div>
+          <div class="events-item__description">На выбор у вас есть 16 вариантов тона: формальный, дружелюбный, академический, эмпатичный, журналистский и другие.</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image3.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
+        </div>
+        <div class="events-item__content">
+          <div class="events-item__title">Цифровые решения для промышленных предприятий</div>
+          <div class="events-item__description">Генератор уникального текста — это инструмент, который создает оригинальные материалы за секунды</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image4.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
+        </div>
+        <div class="events-item__content">
+          <div class="events-item__title">Рекламный хаб Северной столицы</div>
+          <div class="events-item__description">Создавайте тексты с красивыми шрифтами и копируйте их онлайн. Теперь и на русском языке. Выбери шрифт, напиши текст и скопируй результат.</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image5.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
+        </div>
+        <div class="events-item__content">
+          <div class="events-item__title">Двенадцатая конференция «Корпоративное планирование и прогнозирование»</div>
+          <div class="events-item__description">Ваше идеальное приложение для создания захватывающего и креативного текста. Отлично подходит для</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="events-item">
+        <div class="events-item-image-wrapper">
+          <div class="events-item__image">
+            <img src="/images/temp-events-image6.jpg" alt="">
+          </div>
+          <div class="events-item__date">28.02.2024</div>
+          <div class="events-item__type">Статья</div>
+          <div class="events-item__time">20:00 мск</div>
+          <div class="events-item__filter"></div>
+        </div>
+        <div class="events-item__content">
+          <div class="events-item__title">IX Всероссийская Конференция HR-АНАЛИТИКА</div>
+          <div class="events-item__description">Бесплатный онлайн-сервис для перевода цифрового текста в рукописный используя человеческий почерк. Печатай конспекты с помощью нашего генератора текста.</div>
+          <a href="/events-detail.html" class="events-detail-btn">
+            <span class="events-detail-btn__text">Подробнее</span>
+            <img src="/images/circle-right-down.png" class="events-detail-btn__image" alt="">
+          </a>
+        </div>
+      </div>
     </div>
+
+    <ul class="pager">
+      <li class="pager-item pager-item-nav pager-item-previous">
+        <a href="#" class="pager-item-link" rel="prev">Назад</a>
+      </li>
+      <div class="numbers">
+        <li class="pager-item active">
+          <span class="pager-item-span">1</span>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">2</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">3</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">4</a>
+        </li>
+        <li class="pager-item">
+          <a href="#" class="pager-item-link">5</a>
+        </li>
+      </div>
+      <li class="pager-item pager-item-nav pager-item-next">
+        <a href="#" class="pager-item-link" rel="next">Вперед</a>
+      </li>
+    </ul>
+
   </div>
 </div>
 
